# fuzzy-evolutionary-and-neuro-computing

./: .gitmodules  CMakeLists.txt  g1.txt  g2.txt  gd2.txt  gd4.txt  generate.sh  ogd1.txt  ogd2.txt  ogd4.txt  plot.sh  trainingSet.txt
files/homework_03/: config.txt
include/: dataset.hpp
include/crisp/: set.hpp
include/fuzzy/: complement.hpp  conjunction.hpp  defuzzyfication.hpp  disjunction.hpp  domain.hpp  element.hpp  function.hpp  hamacher.hpp  implication.hpp  operation.hpp  relation.hpp  s_norm.hpp  set.hpp  snorm.hpp  t_norm.hpp  tnorm.hpp  zadeh.hpp
include/fuzzy/inference/: engine.hpp  inference.hpp  rule.hpp
include/neural/: resembling.hpp  trainer.hpp
reports/homework_06/: report.md  task_03.gp  task_03.sh  task_04.sh  task_04_gd_1.txt  task_04_gd_1_e.txt  task_04_gd_2.txt  task_04_gd_2_e.txt  task_04_gd_4.txt  task_04_gd_4_e.txt  task_04_ogd_1.txt  task_04_ogd_1_e.txt  task_04_ogd_2.txt  task_04_ogd_2_e.txt  task_04_ogd_4.txt  task_04_ogd_4_e.txt  task_04a.gp  task_04b.gp  task_04c.gp  task_04d.gp  task_04e.gp  task_04f.gp  task_05.sh  task_05a.gp  task_05b.gp  task_07.gp  task_07.sh  task_07_gd_4_e.txt  task_07_ogd_4_e.txt  task_08.sh  task_08_gd_4_e_1e-4.txt  task_08_gd_4_e_1e-8.txt  task_08_gd_4_e_3e-3.txt  task_08_ogd_4_e_1e-2.txt  task_08_ogd_4_e_1e-3.txt  task_08_ogd_4_e_1e-7.txt  task_08a.gp  task_08b.gp
reports/homework_07/: report.md  task_01.sh  task_01a.gp  task_01b.gp  task_02.gp  task_02.sh  task_03.sh  task_03.xml
src/homework_01/task_01/: main.cpp
src/homework_01/task_02/: main.cpp
src/homework_01/task_03/: main.cpp
src/homework_02/task_01/: main.cpp
src/homework_02/task_02/: main.cpp
src/homework_02/task_03/: main.cpp
src/homework_03/example_01/: main.cpp
src/homework_03/example_02/: main.cpp
src/homework_03/ship_controller/: main.cpp  rules.hpp
src/homework_03/task_01/: main.cpp  rules.hpp  ship_controller.hpp
src/homework_03/task_03/: main.cpp
src/homework_05/data_generator/: f1.cpp
src/homework_05/gradient_descent/: main.cpp
src/homework_05/online_gradient_descent/: main.cpp
src/homework_06/gradient_descent/: main.cpp
src/homework_06/online_gradient_descent/: main.cpp
src/homework_07/playground/: main.cpp
